--- a/ProvaDev/css/style.css
+++ b/ProvaDev/css/style.css
@@ -21,7 +21,7 @@ header {
 
 .container {
     margin: 0;
-    padding: 0px 80px;
+    padding: 0px 60px;
 }
 
 .header-container-logo {
@@ -62,32 +62,67 @@ input::placeholder {
 
 .counterline {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     padding-right: 80px;
-    padding-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .novoCarro {
-    letter-spacing: 1px;
-    color: white;
+    padding-top: 16px;
+    color: #fff;
     text-align: center;
-    height: 40px;
-    width: 70px;
+    margin: 0 auto;
+    height: 50px;
+    width: 60px;
     border-radius: 5px;
-    background:linear-gradient(200deg, #FC6500, #C4C4C4) ;
+    background-color: #fd7820d3;
     text-decoration: none;
-    
+    text-transform: uppercase;
+    font-size: 13px;
+    transition: 0.4s;
+    margin-right: 20px;
+}
+.removerCarro {
+    text-align: center;
+    padding-top: 16px;
+    color: #fff;
+    height: 50px;
+    width: 60px;
+    border-radius: 5px;
+    background-color: #fd2f2fd3;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 13px;
+    transition: 0.4s;
+    margin-right: 20px;
+}
+.editarCarro {
+    padding-top: 16px;
+    color: #fff;
+    text-align: center;
+    height: 50px;
+    width: 60px;
+    border-radius: 5px;
+    background-color: #164dc4d3;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 13px;
+    transition: 0.4s;
+}
+.novoCarro:hover {
+    background-color: #FC6500;
 }
 .container-jaguar {
     width: 210px;
-    height: 300px;
-    border-radius: 10px;
+    /* height: 300px; */
+    border-radius: 8px;
     background-color: #E6E6E6;
-    margin-right: 30px;
+    margin-right: 50px;
     margin-bottom: 40px;
-    padding: 10px;
+    padding: 8px;
     cursor: pointer;
+    transition: 0.4s;
 }
 
 .container-jaguar:hover {
@@ -101,6 +136,7 @@ input::placeholder {
 .container-jaguar-img {
     width: 100%;
     height: 150px;
+    border-radius: 5px;
 }
 
 .container-jaguar-name {
@@ -126,6 +162,7 @@ input::placeholder {
     background-color: rgba(0,0,0,0.4);
     cursor: pointer;
 }
+
 #modal-container {
     position: fixed;
     top: 0;
@@ -184,13 +221,18 @@ input::placeholder {
     cursor: pointer;
 }
 
-@media (max-width:700px) {
+@media (max-width:820px) {
+
     #modal-container {
-        width: 90%;
+        width: 80%;
     }
 
     .cards-container {
         justify-items: center;
+        align-items: center;
+    }
+    .counterline {
+        justify-content:space-around;
         align-items: center;
     }
 }
