--- a/ProvaDev/css/formulario.css
+++ b/ProvaDev/css/formulario.css
@@ -48,7 +48,15 @@ form .carDetails .inputBox {
     padding-left: 10px;
     font-size: 15px;
 }
-
+textarea {
+    display: flex;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    resize: none;
+}
 .carDetails .inputImg {
     display:flex;
     padding:5px;
