--- a/ProvaDev/css/listagem.css
+++ b/ProvaDev/css/listagem.css
@@ -19,17 +19,10 @@ header {
     height: 80px;
     display: flex;
     justify-content: space-between;
-    padding: 80px;
 }
 
 .container {
     padding: 0px 60px;
-}
-
-.header-container-logo {
-    margin-right: 80%;
-    width: 55px;
-    height: 55px;
 }
 
 .carTable {
@@ -64,4 +57,24 @@ th{
     color: white;
 	background-color:#fc6500b6;
     border-radius: 3px;
+}
+
+tr {
+    transition: 0.4s;
+}
+
+tr:hover {
+    background-color: #005eff79;
+    letter-spacing: 1px;
+}
+
+.lupaContainer {
+    display: flex;
+}
+
+input {
+    margin-right: 20px;
+    border-radius: 5px;
+    width: 70%;
+    padding-right: 100px;
 }
