--- a/ProvaDev/css/listagem.css
+++ b/ProvaDev/css/listagem.css
@@ -6,9 +6,11 @@
 
 html,body {
     font-family: roboto;
+    /* width: 100%; */
 }
 
 header {
+    position: relative;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -69,12 +71,27 @@ tr:hover {
 }
 
 .lupaContainer {
-    display: flex;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    padding-bottom: 10px;
 }
 
+.lupaImg {
+    position: absolute;
+    right: 100px;
+    top: 3px;
+    height: 25px;
+}
 input {
     margin-right: 20px;
     border-radius: 5px;
-    width: 70%;
+    width: 90%;
     padding-right: 100px;
+}
+
+@media (max-width:700px) {
+
 }
