--- a/ProvaDev/css/listagem.css
+++ b/ProvaDev/css/listagem.css
@@ -92,6 +92,165 @@ input {
     padding-right: 100px;
 }
 
-@media (max-width:700px) {
+.modal-bg {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    cursor: pointer;
+}
+#modal-container {
+    position: fixed;
+    top: 0;
+    left:0;
+    right: 0;
+    width: 40%;
+    margin: 50px auto;
+    background-color: white;
+    border-radius: 6px;
+    flex-wrap: wrap;
+    z-index: 100;
+    padding: 15px;
+    transform: translateY(-120%);
+    transition: all 0.3s;
+}
 
+.closebutton {
+    color: white;
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    width: 35px;
+    height: 35px;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    background-color: #f87117;
+    cursor: pointer;
+}
+.containerForm {
+    max-width: 700px;
+    width: 100%;
+    background:white;
+    padding: 15px 25px;
+    border-radius: 10px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 500px;
+    text-align: center;
+}
+
+.containerForm form .carDetails {
+    display: inline;
+    justify-content: space-between;
+
+}
+
+form .carDetails .inputBox {
+    padding-bottom: 20px;
+    padding-top: 5px;
+}
+
+.carDetails .inputBox input {
+    height: 25px;
+    width: 100%;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px;
+    padding-left: 10px;
+    font-size: 15px;
+}
+textarea {
+    font-family: roboto;
+    display: flex;
+    border: 2px solid #E6E6E6;
+    border-radius: 5px;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+    resize: none;
+}
+.carDetails .inputImg {
+    display:flex;
+    padding:5px;
+    align-items: center;
+}
+
+form .SubmitForm {
+    height: 40px;
+    margin: 10px 0;
+}
+
+form .SubmitForm button {
+    height: 100%;
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 15px;
+    /* espaço entre as letras */
+    text-transform: uppercase;
+    background: #fd7820d3;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+form .SubmitForm button:hover {
+    background:#FC6500;
+    color: #ffffff;
+    letter-spacing: 2px;
+}
+input[type='file']{
+    display: none;
+}
+
+.inputImg label {
+    background-color: #fd7820d3;
+    color: #ffffff;
+    width: 190px;
+    height: 25px;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 3px;
+    margin: 5px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    transition-duration: 0.4s;
+    font-size: 14px;
+}
+
+.inputImg label:hover {
+    letter-spacing: 2px;
+    background-color: #FC6500;
+}
+
+.inputImg strong,span {
+    font-size: 14px;
+    color: #00000081;
+    
+}
+
+input::placeholder {
+    font-family: roboto;
+    font-size: 15px;
+    color: #9A9A9A;
+    width: 500px;
+    padding-left: 10px;
+    padding-right: 20px;
+    
+}
+
+@media (max-width:820px) {
+
+    #modal-container {
+        width: 80%;
+    }
 }
