--- a/ProvaDev/css/index.css
+++ b/ProvaDev/css/index.css
@@ -62,27 +62,13 @@ input::placeholder {
 
 .counterline {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    padding-right: 80px;
+    padding-right: 60px;
     margin-bottom: 25px;
 }
 
-.novoCarro {
-    padding-top: 16px;
-    color: #fff;
-    text-align: center;
-    margin: 0 auto;
-    height: 50px;
-    width: 60px;
-    border-radius: 5px;
-    background-color: #fd7820d3;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    transition: 0.4s;
-    margin-right: 20px;
-}
 .removerCarro {
     text-align: center;
     padding-top: 16px;
@@ -110,9 +96,7 @@ input::placeholder {
     font-size: 13px;
     transition: 0.4s;
 }
-.novoCarro:hover {
-    background-color: #FC6500;
-}
+
 .container-jaguar {
     width: 210px;
     /* height: 300px; */
