--- a/ProvaDev/css/listagem.css
+++ b/ProvaDev/css/listagem.css
@@ -73,26 +73,32 @@ tr:hover {
 .lupaContainer {
     position: relative;
     display:flex;
-    justify-content: center;
-    width: 100%;
-    height: 40px;
+    justify-content: space-between;
+    right: 0;
+    left: 60px;
+    width: 60%;
+    height: 50px;
     padding-bottom: 10px;
 }
 
-.lupaImg {
-    position: absolute;
-    right: 100px;
-    top: 3px;
-    height: 25px;
-}
+
 input {
-    margin-right: 20px;
     border-radius: 5px;
-    width: 90%;
-    padding-right: 100px;
+    width: 80%;
 }
 
 .modal-bg {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    cursor: pointer;
+}
+.modalDeleteBg {
     display: none;
     position: fixed;
     z-index: 99;
@@ -117,6 +123,67 @@ input {
     padding: 15px;
     transform: translateY(-120%);
     transition: all 0.3s;
+    
+}
+
+#modalDeleteContainer {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 30%;
+    left:0;
+    right: 0;
+    width: 30%;
+    margin: 50px auto;
+    background-color: white;
+    border-radius: 6px;
+    z-index: 100;
+    transform: translateY(-600%);
+    transition: all 0.3s;
+}
+#modalDeleteContainer button {
+    margin: 15px;
+    height: 25px;
+    width: 60px; 
+    border: 0;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 10px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition-duration: 0.4s;
+
+}
+#ButtonYes {
+    background-color: rgba(255, 5, 5, 0.623);
+}
+
+#ButtonNo {
+    background-color: rgba(67, 67, 238, 0.63);
+}
+
+#modalDeleteContainer a {
+    font-weight: 600;
+    font-size: 18px;
+    margin-left: 20px;
+}
+
+.closeBtnModal {
+    color: white;
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    background-color: #f87117;
+    cursor: pointer;
 }
 
 .closebutton {
@@ -195,7 +262,7 @@ form .SubmitForm button {
     border: 0;
     border-radius: 5px;
     color: #ffffff;
-    font-size: 15px;
+    font-size: 20px;
     /* espaço entre as letras */
     text-transform: uppercase;
     background: #fd7820d3;
@@ -246,6 +313,50 @@ input::placeholder {
     padding-left: 10px;
     padding-right: 20px;
     
+}
+
+.buttonAdd:hover {
+    background-color: #FC6500;
+}
+.buttonAdd {
+    color: #fff;
+    text-align: center;
+    margin-left: 15px;
+    border-radius: 5px;
+    background-color: #fd7820d3;
+    text-transform: uppercase;
+    transition: 0.4s;
+    border: 0;
+    padding: 10px;
+}
+
+#modalNewCarBg {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    cursor: pointer;
+}
+
+#modalNewCarContainer {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left:0;
+    right: 0;
+    width: 40%;
+    margin: 50px auto;
+    background-color: white;
+    border-radius: 6px;
+    z-index: 100;
+    transform: translateY(-600%);
+    transition-duration: 0.5s;
 }
 
 @media (max-width:820px) {
