--- a/ProvaDev/css/listagem.css
+++ b/ProvaDev/css/listagem.css
@@ -9,10 +9,6 @@ html,body {
     /* width: 100%; */
 }
 
-header {
-    position: relative;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
 
 .header-container {
     width: 100%;
@@ -24,7 +20,10 @@ header {
 }
 
 .container {
-    padding: 0px 60px;
+    margin: 0 auto;
+    width: 90%;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .carTable {
@@ -359,9 +358,9 @@ input::placeholder {
     transition-duration: 0.5s;
 }
 
-@media (max-width:820px) {
+@media (max-width:600) {
+    
+    .header-container {
 
-    #modal-container {
-        width: 80%;
     }
 }
