--- a/ProvaDev/css/index.css
+++ b/ProvaDev/css/index.css
@@ -69,20 +69,6 @@ input::placeholder {
     margin-bottom: 25px;
 }
 
-.removerCarro {
-    text-align: center;
-    padding-top: 16px;
-    color: #fff;
-    height: 50px;
-    width: 60px;
-    border-radius: 5px;
-    background-color: #fd2f2fd3;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    transition: 0.4s;
-    margin-right: 20px;
-}
 .editarCarro {
     padding-top: 16px;
     color: #fff;
@@ -116,6 +102,7 @@ input::placeholder {
 .cards-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 .container-jaguar-img {
     width: 100%;
